Pass master and node security groups as lists
Default will be to pass a list of one security group created by
the common stack. Additional security groups may be defined in
variables and passed into the stacks.

--- a/stack/ansible/playbook.yml
+++ b/stack/ansible/playbook.yml
@@ -42,7 +42,7 @@
           IamInstanceProfile: '{{ common_stack.stack_outputs.MasterInstanceProfile }}'
           LoadBalancerScheme: '{{ load_balancer_scheme }}'
           LoadBalancerSecurityGroup: '{{ common_stack.stack_outputs.LoadBalancerSecurityGroup }}'
-          MasterSecurityGroup: '{{ common_stack.stack_outputs.MasterSecurityGroup }}'
+          MasterSecurityGroups: '{{ ([common_stack.stack_outputs.MasterSecurityGroup] + extra_master_security_groups | default([])) | join(",") }}'
           LambdaRoleArn: '{{ common_stack.stack_outputs.LambdaRoleArn }}'
           KmsKeyId: '{{ kms_key_alias }}'
           PodCidr: '{{ pod_cidr }}'
@@ -69,7 +69,7 @@
           InstanceType: '{{ item.instance_type }}'
           KeyPair: '{{ item.keypair }}'
           IamInstanceProfile: '{{ common_stack.stack_outputs.NodeInstanceProfile }}'
-          NodeSecurityGroup: '{{ common_stack.stack_outputs.NodeSecurityGroup }}'
+          NodeSecurityGroups: '{{ ([common_stack.stack_outputs.NodeSecurityGroup] + item.extra_security_groups | default([])) | join(",") }}'
           ClusterDns: '{{ cluster_dns }}'
           NodeLabels: '{{ item.node_labels | default("") }}'
           K8sApiServer: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}'
