--- a/fpm/usr/lib/systemd/system/keights-kubeadm-init.service
+++ b/fpm/usr/lib/systemd/system/keights-kubeadm-init.service
@@ -2,6 +2,7 @@
 Description=keights-kubeadm-init service
 Requires=var-lib-etcd.mount keights-whisper-controller.service keights-templates.target
 After=var-lib-etcd.mount keights-whisper-controller.service keights-templates.target
+Before=keights-signal.service
 ConditionPathExists=!/var/lib/kubeadm/initialized
 
 [Service]
