--- a/stack/ansible/playbook.yml
+++ b/stack/ansible/playbook.yml
@@ -1,9 +1,6 @@
 - hosts: localhost
   connection: local
 
-  vars_files:
-    - vars/{{ env }}.yml
-
   vars:
     cf_base: ../cloudformation
 
@@ -41,7 +38,7 @@
           ImageId: '{{ image_id }}'
           InstanceType: '{{ master_instance_type }}'
           KeyPair: '{{ keypair }}'
-          IamInstanceProfile: '{{ common_stack.stack_outputs.MasterInstanceProfile }}'
+          MasterInstanceProfile: '{{ common_stack.stack_outputs.MasterInstanceProfile }}'
           LoadBalancerScheme: '{{ load_balancer_scheme }}'
           LoadBalancerSecurityGroup: '{{ common_stack.stack_outputs.LoadBalancerSecurityGroup }}'
           MasterSecurityGroups: '{{ ([common_stack.stack_outputs.MasterSecurityGroup] + extra_master_security_groups | default([])) | join(",") }}'
@@ -73,11 +70,11 @@
           ImageId: '{{ item.image_id }}'
           InstanceType: '{{ item.instance_type }}'
           KeyPair: '{{ item.keypair }}'
-          IamInstanceProfile: '{{ common_stack.stack_outputs.NodeInstanceProfile }}'
+          NodeInstanceProfile: '{{ common_stack.stack_outputs.NodeInstanceProfile }}'
           NodeSecurityGroups: '{{ ([common_stack.stack_outputs.NodeSecurityGroup] + item.extra_security_groups | default([])) | join(",") }}'
           ClusterDns: '{{ cluster_dns }}'
           NodeLabels: '{{ item.node_labels | default("") }}'
-          K8sApiServer: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}'
+          LoadBalancerDnsName: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}'
         tags:
           KubernetesCluster: '{{ cluster_name }}'
       with_items: '{{ node_groups }}'
