--- a/stack/ansible/playbook.yml
+++ b/stack/ansible/playbook.yml
@@ -2,7 +2,7 @@
   connection: local
 
   vars_files:
-    - vars/{{ env }}.yml
+    - vars/{{ cluster }}.yml
 
   vars:
     cf_base: ../cloudformation
