--- a/stack/ansible/example/requirements.txt
+++ b/stack/ansible/example/requirements.txt
@@ -1,23 +1,25 @@
-ansible==2.5.0
+ansible==2.6.4
 asn1crypto==0.24.0
-awscli==1.15.2
+awscli==1.16.10
 bcrypt==3.1.4
-boto3==1.7.2
-botocore==1.10.2
+boto3==1.9.0
+botocore==1.12.0
 cffi==1.11.5
-colorama==0.3.7
-cryptography==2.2.2
+colorama==0.3.9
+cryptography==2.3.1
 docutils==0.14
-idna==2.6
+idna==2.7
 Jinja2==2.10
 jmespath==0.9.3
 MarkupSafe==1.0
 paramiko==2.4.1
-pyasn1==0.4.2
+pkg-resources==0.0.0
+pyasn1==0.4.4
 pycparser==2.18
 PyNaCl==1.2.1
-python-dateutil==2.6.1
-PyYAML==3.12
+python-dateutil==2.7.3
+PyYAML==3.13
 rsa==3.4.2
 s3transfer==0.1.13
 six==1.11.0
+urllib3==1.23
