--- a/keights/resources/usr/lib/systemd/system/keights-volumize.service
+++ b/keights/resources/usr/lib/systemd/system/keights-volumize.service
@@ -8,10 +8,15 @@ Before=var-lib-etcd.mount
 # Environment=KEIGHTS_VOLUME_TAG=
 # Environment=KEIGHTS_VOLUME_DEVICE=
 Type=oneshot
-ExecStart=/usr/bin/keights volumize \
+ExecStart=/bin/sh -c ' \
+    while true; do \
+        /usr/bin/keights volumize \
             -c ${KEIGHTS_CLUSTER_NAME} \
             -d ${KEIGHTS_VOLUME_DEVICE} \
-            -v ${KEIGHTS_VOLUME_TAG}
+            -v ${KEIGHTS_VOLUME_TAG} && break; \
+	sleep 10; \
+    done \
+'
 
 [Install]
 WantedBy=multi-user.target
