Add CloudFormation signaling to nodes as well as masters
This should improve rolling upgrades for nodes, though there is
more work needed to add draining before termination.

--- a/stack/cloudformation/master.yml
+++ b/stack/cloudformation/master.yml
@@ -318,6 +318,7 @@ Resources:
                   [Service]
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_STACK_NAME=${AWS::StackName}
+                  Environment=KEIGHTS_MASTER=true
 
               - path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
                 owner: root:root
