--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -67,6 +67,10 @@ Resources:
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MaxBatchSize: 1
+        PauseTime: PT15M
+        WaitOnResourceSignals: true
+        SuspendProcesses:
+          - HealthCheck
 
   LaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
@@ -106,6 +110,15 @@ Resources:
                   Environment=KEIGHTS_APISERVER=${LoadBalancerDnsName}
                   Environment=KEIGHTS_APISERVER_PORT=6443
 
+              - path: /etc/systemd/system/keights-signal.service.d/environment.conf
+                owner: root:root
+                permissions: '0644'
+                content: |
+                  [Service]
+                  Environment=AWS_REGION=${AWS::Region}
+                  Environment=KEIGHTS_STACK_NAME=${AWS::StackName}
+                  Environment=KEIGHTS_MASTER=false
+
               - path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
                 owner: root:root
                 permissions: '0644'
@@ -135,7 +148,8 @@ Resources:
             runcmd:
               - systemctl daemon-reload
               - systemctl enable kubelet.service
-              - systemctl start keights-kubeadm-join.service
+              - systemctl start --no-block keights-kubeadm-join.service
+              - systemctl start --no-block keights-signal.service
 
 Outputs:
   AutoScalingGroup:
