--- a/keights/resources/usr/lib/systemd/system/keights-signal.service
+++ b/keights/resources/usr/lib/systemd/system/keights-signal.service
@@ -1,21 +1,26 @@
 [Unit]
 Description=keights-signal service
-Requires=keights-kubeadm-init.service
-After=keights-kubeadm-init.service
 
 [Service]
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_STACK_NAME=
+Environment=KEIGHTS_MASTER=false
 Environment=KEIGHTS_RESOURCE=AutoScalingGroup
 Type=oneshot
 ExecStart=/bin/sh -c ' \
-    cacert=/etc/kubernetes/pki/ca.crt; \
-    myip=`curl -s http://169.254.169.254/latest/meta-data/local-ipv4` && \
     while true; do \
-        health=`curl -s --cacert $${cacert} https://$${myip}:6443/healthz`; \
-	[ "$${health}" = "ok" ] && break; \
-	sleep 5; \
+        [ -f /var/lib/kubeadm/initialized ] && break; \
+        sleep 5; \
     done && \
+    if ${KEIGHTS_MASTER}; then \
+        cacert=/etc/kubernetes/pki/ca.crt; \
+        myip=`curl -s http://169.254.169.254/latest/meta-data/local-ipv4` && \
+        while true; do \
+            health=`curl -s --cacert $${cacert} https://$${myip}:6443/healthz`; \
+            [ "$${health}" = "ok" ] && break; \
+            sleep 5; \
+        done; \
+    fi && \
     /usr/bin/keights signal \
         -n ${KEIGHTS_STACK_NAME} \
         -r ${KEIGHTS_RESOURCE} \
