Use Amazon's recommended process suspension during ASG updates

--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -71,6 +71,10 @@ Resources:
         WaitOnResourceSignals: true
         SuspendProcesses:
           - HealthCheck
+          - ReplaceUnhealthy
+          - AZRebalance
+          - AlarmNotification
+          - ScheduledActions
 
   LaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
