--- a/stack/cloudformation/master.yml
+++ b/stack/cloudformation/master.yml
@@ -191,6 +191,10 @@ Resources:
         WaitOnResourceSignals: true
         SuspendProcesses:
           - HealthCheck
+          - ReplaceUnhealthy
+          - AZRebalance
+          - AlarmNotification
+          - ScheduledActions
 
   Volume1:
     Type: AWS::EC2::Volume
