--- a/stack/ami/requirements.txt
+++ b/stack/ami/requirements.txt
@@ -1,16 +1,17 @@
-ansible==2.4.1.0
-asn1crypto==0.23.0
+ansible==2.6.4
+asn1crypto==0.24.0
 bcrypt==3.1.4
-cffi==1.11.2
-cryptography==2.1.2
+cffi==1.11.5
+cryptography==2.3.1
 enum34==1.1.6
-idna==2.6
-ipaddress==1.0.18
-Jinja2==2.9.6
+idna==2.7
+ipaddress==1.0.22
+Jinja2==2.10
 MarkupSafe==1.0
-paramiko==2.3.1
-pyasn1==0.3.7
+paramiko==2.4.1
+pkg-resources==0.0.0
+pyasn1==0.4.4
 pycparser==2.18
-PyNaCl==1.1.2
-PyYAML==3.12
+PyNaCl==1.2.1
+PyYAML==3.13
 six==1.11.0
