--- a/keights/resources/etc/kubernetes/addons/kube-router.yaml
+++ b/keights/resources/etc/kubernetes/addons/kube-router.yaml
@@ -97,6 +97,8 @@ spec:
       - name: kube-router-cfg
         configMap:
           name: kube-router-cfg
+  updateStrategy:
+    type: RollingUpdate
 
 ---
 apiVersion: v1
