--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -14,6 +14,10 @@ Parameters:
     Description: Maximum number of instances
     Type: Number
     Default: 1
+  UpdateMaxBatchSize:
+    Description: Maximum number of instances to update at a time
+    Type: Number
+    Default: 1
   VpcId:
     Description: ID of VPC where cluster will be placed
     Type: AWS::EC2::VPC::Id
@@ -66,7 +70,7 @@ Resources:
           PropagateAtLaunch: true
     UpdatePolicy:
       AutoScalingRollingUpdate:
-        MaxBatchSize: 1
+        MaxBatchSize: !Ref UpdateMaxBatchSize
         PauseTime: PT15M
         WaitOnResourceSignals: true
         SuspendProcesses:
