--- a/stack/cloudformation/common.yml
+++ b/stack/cloudformation/common.yml
@@ -172,6 +172,14 @@ Resources:
       SourceSecurityGroupId: !Ref MasterSecurityGroup
       IpProtocol: '-1'
 
+  HostedZone:
+    Type: AWS::Route53::HostedZone
+    Properties:
+      Name: !Sub ${ClusterName}.local
+      VPCs:
+        - VPCId: !Ref VpcId
+          VPCRegion: !Ref AWS::Region
+
   K8sMasterAccess:
     Type: AWS::IAM::ManagedPolicy
     Properties:
@@ -302,6 +310,11 @@ Resources:
               - kms:Encrypt
             Resource:
               - !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${KmsKeyId}'
+          - Effect: Allow
+            Action:
+              - route53:ChangeResourceRecordSets
+            Resource:
+              - !Sub 'arn:aws:route53:::hostedzone/${HostedZone}'
 
   MasterRole:
     Type: AWS::IAM::Role
@@ -392,3 +405,6 @@ Outputs:
   LambdaRoleArn:
     Description: IAM role ARN for custom CloudFormation Lambdas
     Value: !Sub ${LambdaRole.Arn}
+  HostedZoneId:
+    Description: ID of Route53 DNS hosted zone
+    Value: !Ref HostedZone
