--- a/stack/cloudformation/master.yml
+++ b/stack/cloudformation/master.yml
@@ -98,6 +98,9 @@ Parameters:
     Description: Bucket used to store Lambda archives
     Type: String
     Default: cloudboss-public
+  HostedZoneId:
+    Description: ID of Route53 DNS hosted zone
+    Type: String
 
 Conditions:
   HasThreeMasters: !Equals [!Ref NumInstances, 3]
@@ -125,6 +128,44 @@ Resources:
       MemorySize: 512
       Timeout: 30
       Role: !Ref LambdaRoleArn
+
+  AutoNamingFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code:
+        S3Bucket: !Ref ResourceBucket
+        S3Key: !Sub stackbot/auto_namer/${KeightsVersion}/go1.x/auto_namer-${KeightsVersion}.zip
+      Handler: auto_namer
+      Runtime: go1.x
+      Timeout: 30
+      Role: !Ref LambdaRoleArn
+      Environment:
+        Variables:
+          ASG_NAME: !Ref AWS::StackName
+          DNS_TTL: 15
+          HOST_BASE_NAME: etcd
+          HOSTED_ZONE_NAME: !Sub ${ClusterName}.local
+          HOSTED_ZONE_ID: !Ref HostedZoneId
+
+  AutoNamingEventsRule:
+    Type: AWS::Events::Rule
+    Properties:
+      Targets:
+        - Id: !Sub ${AWS::StackName}-auto-namer
+          Arn: !GetAtt AutoNamingFunction.Arn
+      EventPattern:
+        source: [aws.autoscaling]
+        detail-type: [EC2 Instance Launch Successful]
+        detail:
+          AutoScalingGroupName: [!Ref 'AWS::StackName']
+
+  AutoNamingInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref AutoNamingFunction
+      Action: lambda:InvokeFunction
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt AutoNamingEventsRule.Arn
 
   SubnetToAz:
     Type: Custom::SubnetToAz
@@ -173,12 +214,13 @@ Resources:
 
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
-    DependsOn: KubeCa
+    DependsOn: [KubeCa, AutoNamingInvokePermission]
     CreationPolicy:
       ResourceSignal:
         Count: !Ref NumInstances
         Timeout: PT15M
     Properties:
+      AutoScalingGroupName: !Ref AWS::StackName
       DesiredCapacity: !Ref NumInstances
       LaunchConfigurationName: !Ref LaunchConfiguration
       MaxSize: !Ref NumInstances
