--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -66,7 +66,7 @@ Resources:
       VPCZoneIdentifier: !Ref SubnetIds
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}
+          Value: !Ref AWS::StackName
           PropagateAtLaunch: true
     UpdatePolicy:
       AutoScalingRollingUpdate:
